tests/NormalTests/paczka1/fuzzy1/36144338.err
Error in line 11: Wf6 S759 38,9
Error in line 20: 8Zsc S568 66,A
Error in line 13: Wf6 A901 30,7
